# vechile-manager-axum

todoapp-rest-api/: .gitignore  Cargo.toml
todoapp-rest-api/migrations/2025-12-04-033654-0000_create_todos/: up.sql
todoapp-rest-api/src/: main.rs  schema.rs
todoapp-rest-api/src/todo/: mod.rs  model.rs  todo_handler.rs
vehicle-manager-axum/: .gitignore  Cargo.toml
vehicle-manager-axum/src/: main.rs  vehicle.rs
