[package]
name = "todoapp-rest-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["http2", "ws"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4"] }
dotenv = "0.15"
diesel = { version = "2.2.0", features = ["mysql"] }
pool = "0.1.4"
